--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Monomakh&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-:root{
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    scroll-behavior: smooth;
+:root {
+  font-family: "Monomakh", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-optical-sizing: auto;
+  scroll-behavior: smooth;
 }
